--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="wd_blue">#FF00FFFF</color>
     <color name="wd_green">#FF00FF00</color>
     <color name="dark_gray">#FF121212</color>
+    <color name="wd_red">#FFFF0000</color>
 </resources>
